# tbot-wind

./: .gitignore  LICENSE  README.md  pyproject.toml
src/tbot_wind/: main.py
src/tbot_wind/core/: data_context_fetcher.py  data_initializer.py  ib_connection_manager.py  ib_data_fetcher.py  indicator_base.py  openai_decision.py  overlapping_data_manager.py  scheduler.py  stock_datafetcher.py  tbot_wind.py  yf_data_fetcher.py
src/tbot_wind/database/: database_wrapper.py  redis_historical_date_range.py  redis_wrapper.py  sqlite3_wrapper.py
src/tbot_wind/dispatch/: http_message_sender.py  message_deduplicator.py  message_sender_base.py  redis_message_guard.py  redis_message_publisher.py  webhook_message_generator.py
src/tbot_wind/user/: alpha_trend_indicator.py  custom_order.py  dotenv  macd_indicator_talipp.py  orders_config.yaml  supertrend_indicator_talipp.py
src/tbot_wind/utils/: constants.py  objects.py  ta_utils.py  tbot_datetime.py  tbot_env.py  tbot_log.py  tbot_status.py  tbot_utils.py
